feat: implement trouble ticket core logic, migration and tests